fixing responsive header on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -1,1 +1,33 @@
-@media only screen and (max-width: 600px) {}
+@media only screen and (min-width: 781px) {
+    .navbar-mobile {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 780px) {
+    .navbar-desktop {
+        display: none;
+    }
+
+    .navbar-mobile {
+        display: block;
+    }
+
+    .navbar-mobile>ul {
+        display: flex;
+        flex: 1 1;
+    }
+
+    nav>.navbar-mobile>ul>li {
+        display: inline-flex;
+        font-family: 'Open Sans', sans-serif;
+        margin: 0 10px;
+        padding: 20px 0;
+        text-transform: uppercase;
+    }
+
+    nav>.navbar-mobile>ul>li:first-child {
+        margin-left: 5vw;
+        margin-right: auto;
+    }
+}
